chore(docker): update docker-compose for Traefik settings

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,9 @@ version: '3.8'
 networks:
   test-app_default:
     driver: overlay
+    attachable: true  # Allows external services to connect
+    labels:
+      - "com.example.description=Main traefik network for all services"
 
 secrets:
   cf_api_key:
@@ -15,6 +18,7 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--providers.docker.network=test-app_default"
+      - "--providers.docker.swarmmode=true"  # Explicitly enable swarm mode
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
@@ -27,8 +31,14 @@ services:
       - "--certificatesresolvers.le.acme.dnschallenge.resolvers=1.1.1.1:53,1.0.0.1:53" 
       - "--api.insecure=false"
     ports:
-      - "80:80"
-      - "443:443"
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
     environment:
       - CF_DNS_API_TOKEN=/run/secrets/cf_api_key
     secrets:
@@ -40,8 +50,20 @@ services:
       - test-app_default
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager  # Ensure Traefik runs on a manager node
       restart_policy:
         condition: on-failure
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=test-app_default"
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://localhost:8080/api/rawdata"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
   frontend-main:
     image: edwardkemp/frontend:latest
