--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,11 +34,11 @@ services:
       - target: 80
         published: 80
         protocol: tcp
-        mode: host
+        mode: ingress
       - target: 443
         published: 443
         protocol: tcp
-        mode: host
+        mode: ingress
     environment:
       - CF_DNS_API_TOKEN=/run/secrets/cf_api_key
     secrets:
