--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ networks:
     driver: overlay
     attachable: true 
     labels:
-      - "com.example.description=Main traefik network for all services"
+      - "com.example.description=Main Traefik network for all services"
 
 secrets:
   cf_api_key:
@@ -58,12 +58,6 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.docker.network=test-app_default"
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:8080/api/rawdata"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
 
   frontend-main:
     image: edwardkemp/frontend:latest
