--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,11 +63,11 @@ services:
     image: edwardkemp/frontend:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)"
+      - "traefik.http.routers.frontend.rule=Host('edward-codes.com')"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=le"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
-      - "traefik.http.routers.frontend-www.rule=Host(`www.edward-codes.com`)"
+      - "traefik.http.routers.frontend-www.rule=Host('www.edward-codes.com')"
       - "traefik.http.routers.frontend-www.entrypoints=websecure"
       - "traefik.http.routers.frontend-www.tls.certresolver=le"
     networks:
