--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -64,15 +64,23 @@ services:
     image: edwardkemp/frontend:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend-main.rule=Host(`edward-codes.com`)"
-      - "traefik.http.routers.frontend-main.entrypoints=websecure"
-      - "traefik.http.routers.frontend-main.tls.certresolver=le"
-      - "traefik.http.services.frontend-main.loadbalancer.server.port=80"
-      - "traefik.http.routers.frontend-www-main.rule=Host(`www.edward-codes.com`)"
-      - "traefik.http.routers.frontend-www-main.entrypoints=websecure"
-      - "traefik.http.routers.frontend-www-main.tls.certresolver=le"
-      - "traefik.docker.network=test-app_default"
-      - "traefik.http.services.frontend-main.loadbalancer.swarm=true"
+
+      # Router for Non-WWW Domain
+      - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=le"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+
+      # Router for WWW Domain with Redirect Middleware
+      - "traefik.http.routers.frontend-www.rule=Host(`www.edward-codes.com`)"
+      - "traefik.http.routers.frontend-www.entrypoints=websecure"
+      - "traefik.http.routers.frontend-www.tls.certresolver=le"
+      - "traefik.http.routers.frontend-www.middlewares=redirect-www"
+
+      # Middleware to Redirect WWW to Non-WWW
+      - "traefik.http.middlewares.redirect-www.redirectregex.regex=^https?://www\\.(.*)"
+      - "traefik.http.middlewares.redirect-www.redirectregex.replacement=https://$${1}"
+      - "traefik.http.middlewares.redirect-www.redirectregex.permanent=true"
     networks:
       - test-app_default
     deploy:
