--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,13 @@
 # Build stage
-FROM node:18-alpine as build
+FROM node:18-alpine AS build
 
 WORKDIR /app
-
-COPY favicon /usr/share/nginx/html/favicon/
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install ALL dependencies (including dev dependencies needed for build)
+RUN npm ci
 
 # Copy source code
 COPY . .
@@ -26,9 +24,10 @@ COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 # Copy built React app
 COPY --from=build /app/dist /usr/share/nginx/html/
 
-# Copy static assets (resume, content)
+# Copy static assets (resume, content, favicon)
 COPY resume /usr/share/nginx/html/resume/
 COPY content /usr/share/nginx/html/content/
+COPY favicon /usr/share/nginx/html/favicon/
 
 EXPOSE 80
 
